Session eingeführt und User-Daten auf UserPage geladen
- Session in Program.cs aktiviert und korrekt positioniert (AddSession + UseSession)
- Bei Login und Registrierung wird UserId in der Session gespeichert
- UserPage lädt die eingeloggte Person über Session und zeigt Name & Coins an
- Name aus E-Mail-Adresse wird automatisch in Title Case umgewandelt (z. B. „gabriel.deiac@htlwy.at“ → „Gabriel Deiac“)
- Platzhalter auf UserPage.cshtml durch dynamische Razor-Ausgaben ersetzt

--- a/Carpooling_Students/Carpooling_Students.csproj
+++ b/Carpooling_Students/Carpooling_Students.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\**" />
+    <Content Remove="Models\**" />
+    <EmbeddedResource Remove="Models\**" />
+    <None Remove="Models\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="wwwroot\Images\Auto.png" />
     <None Include="wwwroot\Images\Background2.jpg" />
     <None Include="wwwroot\Images\HomeIcon.png" />
