--- a/.gitignore
+++ b/.gitignore
@@ -417,3 +417,5 @@ FodyWeavers.xsd
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode
 /Carpooling_Students/carpool.db-wal
+/Carpooling_Students/carpool.db-wal
+/Carpooling_Students/carpool.db-shm
